# MaterialsFramework_EPM

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: gh-pages.yml  lint.yml  release.yml  tests.yml
docs/: changelog.md  index.md
docs/api/: io.md
docs/api/analysis/: annni.md  bain.md  cte.md  cubic_elastic.md  elastic.md  eos.md  formation_energy.md  h_solubility.md  index.md  phono3py.md  phonopy.md  usfe.md
docs/api/calculators/: alignn.md  alphanet.md  base.md  chgnet.md  deepmd.md  eqnorm.md  eqv2.md  esen.md  gptff.md  grace.md  hienet.md  index.md  m3gnet.md  mace.md  mattersim.md  megnet.md  nequip.md  nequix.md  newtonnet.md  orb.md  petmad.md  posegnn.md  random.md  sevennet.md  uma.md  vasp.md
docs/api/tools/: base_calculator.md  base_md.md  bond_lattice_parameter.md  cahn_hilliard.md  cluster_expansion.md  elastic.md  index.md  sqs2tdb.md  sqsgen.md  stability_map.md  trajectory.md
docs/api/transformations/: annni.md  bain.md  cte.md  cubic_elastic.md  elastic.md  eos.md  formation_energy.md  h_solubility.md  index.md  phono3py.md  phonopy.md  usfe.md
docs/getting-started/: index.md  installation.md  mlip-conflicts.md  quickstart.md
docs/user-guide/: analysis.md  index.md  md.md  relaxation.md
src/materialsframework/: __init__.py
src/materialsframework/analysis/: __init__.py  annni.py  bain.py  cte.py  cubic_elastic_constants.py  elastic_constants.py  eos.py  formation_energy.py  green_kubo.py  h_solubility.py  phono3py.py  phonopy.py  registry.py  usfe.py
src/materialsframework/calculators/: __init__.py  alignn.py  alphanet.py  chgnet.py  deepmd.py  eqnorm.py  eqv2.py  esen.py  gptff.py  grace.py  hienet.py  m3gnet.py  mace.py  mattersim.py  megnet.py  nequip.py  nequix.py  newtonnet.py  orb.py  petmad.py  posegnn.py  random.py  registry.py  sevennet.py  uma.py  vasp.py
src/materialsframework/io/: __init__.py  file_parser.py
src/materialsframework/tools/: __init__.py  autocorrelation.py  bond_lattice_parameter.py  cahn_hilliard.py  calculator.py  cluster_expansion.py  elastic.py  heat_flux.py  md.py  registry.py  sqs2tdb.py  sqsgen.py  stability_map.py  trajectory.py  utils.py
src/materialsframework/transformations/: __init__.py  annni.py  bain.py  cte.py  cubic_elastic_constants.py  elastic_constants.py  formation_energy.py  h_solubility.py  phono3py.py  phonopy.py  registry.py  special_quasirandom_structures.py  usfe.py
tests/: __init__.py  conftest.py  test_base_calculator.py  test_trajectory.py
tests/analysis/: conftest.py  test_annni.py  test_bain.py  test_cte.py  test_cubic_elastic_constants.py  test_elastic_constants.py  test_eos.py  test_formation_energy.py  test_h_solubility.py  test_phono3py.py  test_phonopy.py  test_registry.py  test_usfe.py
tests/calculators/: __init__.py  test_alignn.py  test_alphanet.py  test_chgnet.py  test_deepmd.py  test_eqnorm.py  test_eqv2.py  test_esen.py  test_gptff.py  test_grace.py  test_hienet.py  test_m3gnet.py  test_mace.py  test_mattersim.py  test_megnet.py  test_nequip.py  test_nequix.py  test_newtonnet.py  test_orb.py  test_petmad.py  test_posegnn.py  test_random.py  test_registry.py  test_sevennet.py  test_uma.py  test_vasp.py
tests/io/: test_file_parser.py
tests/tools/: test_bond_lattice_parameter.py  test_cahn_hilliard.py  test_cluster_expansion.py  test_elastic.py  test_registry.py  test_sqs2tdb.py  test_sqsgen.py  test_stability_map.py  test_utils.py
tests/transformations/: __init__.py  test_annni.py  test_bain.py  test_cte.py  test_cubic_elastic_constants.py  test_elastic_constants.py  test_eos.py  test_formation_energy.py  test_h_solubility.py  test_phono3py.py  test_phonopy.py  test_registry.py  test_usfe.py
