[project]
name = "materialsframework"
version = "0.12.0"
description = "A modular Python framework for deploying, benchmarking, and experimenting with machine learning interatomic potentials (MLIPs)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Doguhan Sariturk", email = "doguhan.sariturk@gmail.com" },
]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "Programming Language :: Python"
]
dependencies = [
    "ase>=3.27.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pymatgen>=2025.10.7",
    "scipy>=1.15.0,<1.17.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.4",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material==9.7.4",
    "mkdocstrings[python]==1.0.3",
]
plots     = ["matplotlib>=3.9.0"]
phonopy   = ["phonopy>=3.1.0"]
phono3py  = ["phono3py>=3.28.0"]
sqsgen    = ["sqsgenerator>=0.5.4"]
calphad   = ["pycalphad>=0.11.1", "pandarallel>=1.6.5"]
ce        = ["icet>=3.2", "trainstation>=1.2"]
alignn    = ["alignn>=2025.4.1"]
alphanet  = ["alphanet @ git+https://github.com/zmyybc/AlphaNet.git@v0.1.2"]
chgnet    = ["chgnet>=0.4.2"]
deepmd    = ["deepmd-kit[torch]>=3.1.2"]
eqnorm    = ["eqnorm @ git+https://github.com/yzchen08/eqnorm.git@57527db44fee9fab3fb5775dd860ca4bbe014f44"]
eqv2      = ["fairchem-core>=1.10.0,<2.0"]
esen      = ["fairchem-core>=1.10.0,<2.0"]
gptff     = ["gptff @ git+https://github.com/atomly-materials-research-lab/GPTFF.git@4cef93a9aa573c86c6bb9100d3d48978ad616429"]
grace     = ["tensorpotential>=0.5.7"]
hienet    = ["hienet @ git+https://github.com/divelab/AIRS.git@579c13340e3f2699e73bc67444d563dabd015d6c#subdirectory=OpenMat/HIENet"]
mace      = ["mace-torch>=0.3.15"]
matgl     = ["matgl>=2.0.0"]
mattersim = ["mattersim>=1.2.1"]
nequip    = ["nequip>=0.17.0"]
nequix    = ["nequix>=0.4.3"]
newtonnet = ["newtonnet>=2.0.0"]
orb       = ["orb-models>=0.5.5"]
petmad    = ["upet>=0.2.1"]
posegnn   = []
sevennet  = ["sevenn>=0.12.0"]
uma       = ["fairchem-core>=2.0.0"]

[project.urls]
Home-page = "https://github.com/dogusariturk/MaterialsFramework/"
Issues = "https://github.com/dogusariturk/MaterialsFramework/issues"
Repository = "https://github.com/dogusariturk/MaterialsFramework.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64' and implementation_name == 'cpython'",
]
fork-strategy = "fewest"

conflicts = [
  [{ extra = "mace" }, { extra = "eqv2"      }],
  [{ extra = "mace" }, { extra = "esen"      }],
  [{ extra = "mace" }, { extra = "uma"       }],
  [{ extra = "mace" }, { extra = "nequip"    }],
  [{ extra = "mace" }, { extra = "sevennet"  }],
  [{ extra = "mace" }, { extra = "eqnorm"    }],
  [{ extra = "mace" }, { extra = "nequix"    }],
  [{ extra = "deepmd" }, { extra = "mace"    }],
  [{ extra = "deepmd" }, { extra = "eqv2"    }],
  [{ extra = "deepmd" }, { extra = "esen"    }],
  [{ extra = "deepmd" }, { extra = "uma"     }],
  [{ extra = "orb" }, { extra = "eqv2"       }],
  [{ extra = "orb" }, { extra = "esen"       }],
  [{ extra = "orb" }, { extra = "uma"        }],
  [{ extra = "uma" }, { extra = "eqv2"       }],
  [{ extra = "uma" }, { extra = "esen"       }],
  [{ extra = "alignn" }, { extra = "mace"      }],
  [{ extra = "alignn" }, { extra = "eqv2"      }],
  [{ extra = "alignn" }, { extra = "esen"      }],
  [{ extra = "alignn" }, { extra = "uma"       }],
  [{ extra = "alignn" }, { extra = "orb"       }],
  [{ extra = "alignn" }, { extra = "deepmd"    }],
  [{ extra = "alignn" }, { extra = "chgnet"    }],
  [{ extra = "alignn" }, { extra = "sevennet"  }],
  [{ extra = "alignn" }, { extra = "nequip"    }],
  [{ extra = "alignn" }, { extra = "nequix"    }],
  [{ extra = "alignn" }, { extra = "petmad"    }],
  [{ extra = "petmad" }, { extra = "eqv2"      }],
  [{ extra = "petmad" }, { extra = "esen"      }],
  [{ extra = "alignn" }, { extra = "mattersim" }],
  [{ extra = "mattersim" }, { extra = "mace"     }],
  [{ extra = "mattersim" }, { extra = "eqv2"     }],
  [{ extra = "mattersim" }, { extra = "esen"     }],
  [{ extra = "mattersim" }, { extra = "uma"      }],
  [{ extra = "mattersim" }, { extra = "deepmd"   }],
  [{ extra = "mattersim" }, { extra = "chgnet"   }],
  [{ extra = "mattersim" }, { extra = "sevennet" }],
  [{ extra = "mattersim" }, { extra = "nequip"   }],
  [{ extra = "newtonnet" }, { extra = "eqv2"      }],
  [{ extra = "newtonnet" }, { extra = "esen"      }],
  [{ extra = "newtonnet" }, { extra = "uma"       }],
  [{ extra = "newtonnet" }, { extra = "mace"      }],
  [{ extra = "newtonnet" }, { extra = "orb"       }],
  [{ extra = "newtonnet" }, { extra = "deepmd"    }],
  [{ extra = "newtonnet" }, { extra = "mattersim" }],
  [{ extra = "newtonnet" }, { extra = "chgnet"    }],
  [{ extra = "newtonnet" }, { extra = "sevennet"  }],
  [{ extra = "newtonnet" }, { extra = "nequip"    }],
  [{ extra = "newtonnet" }, { extra = "eqnorm"    }],
]

override-dependencies = ["tensorflow<2.20"]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-cluster = ["torch"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/materialsframework"]

[tool.hatch.build.targets.sdist]
include = ["src/materialsframework", "pyproject.toml", "README.md", "LICENSE"]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # pycodestyle Errors
    "ERA", # Eradicate
    "F",   # Pyflakes
    "FA",  # flake8-future-annotations
    "I",   # isort
    "ICN", # flake8-import-conventions
    "N",   # pep8-naming
    "PL",  # Pylint
    "PTH", # flake8-use-pathlib
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",   # pycodestyle Warnings
]
ignore = [
    "E402",    # module level import not at top of file
    "E501",    # line too long
    "ERA001",  # Eradicate: Commented-out code
    "N801",    # class names should be in CamelCase
    "N802",    # function names should be in snake_case
    "PLC0415", # `import` should be at the top-level of a file
    "PLR0911", # Too many return statements in function
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
]
pydocstyle.convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests that require an installed optional dependency",
]

[project.entry-points."materialsframework.calculators"]
alignn      = "materialsframework.calculators.alignn:AlignnCalculator"
alphanet    = "materialsframework.calculators.alphanet:AlphaNetCalculator"
chgnet      = "materialsframework.calculators.chgnet:CHGNetCalculator"
deepmd      = "materialsframework.calculators.deepmd:DeePMDCalculator"
eqnorm      = "materialsframework.calculators.eqnorm:EqnormCalculator"
eqv2        = "materialsframework.calculators.eqv2:EqV2Calculator"
esen        = "materialsframework.calculators.esen:eSENCalculator"
gptff       = "materialsframework.calculators.gptff:GPTFFCalculator"
grace       = "materialsframework.calculators.grace:GraceCalculator"
hienet      = "materialsframework.calculators.hienet:HIENetCalculator"
m3gnet      = "materialsframework.calculators.m3gnet:M3GNetCalculator"
mace        = "materialsframework.calculators.mace:MACECalculator"
mattersim   = "materialsframework.calculators.mattersim:MatterSimCalculator"
megnet      = "materialsframework.calculators.megnet:MEGNetCalculator"
nequip      = "materialsframework.calculators.nequip:NequIPCalculator"
nequix      = "materialsframework.calculators.nequix:NequixCalculator"
newtonnet   = "materialsframework.calculators.newtonnet:NewtonNetCalculator"
orb         = "materialsframework.calculators.orb:ORBCalculator"
petmad      = "materialsframework.calculators.petmad:PetMadCalculator"
posegnn     = "materialsframework.calculators.posegnn:PosEGNNCalculator"
random      = "materialsframework.calculators.random:RandomCalculator"
sevennet    = "materialsframework.calculators.sevennet:SevenNetCalculator"
uma         = "materialsframework.calculators.uma:UMACalculator"
vasp        = "materialsframework.calculators.vasp:VASPCalculator"

[project.entry-points."materialsframework.analyzers"]
annni            = "materialsframework.analysis.annni:ANNNIStackingFaultAnalyzer"
bain             = "materialsframework.analysis.bain:BainPathAnalyzer"
cte              = "materialsframework.analysis.cte:CTEAnalyzer"
cubic_elastic_constants = "materialsframework.analysis.cubic_elastic_constants:CubicElasticConstantsAnalyzer"
elastic_constants = "materialsframework.analysis.elastic_constants:ElasticConstantsAnalyzer"
eos              = "materialsframework.analysis.eos:EOSAnalyzer"
formation_energy = "materialsframework.analysis.formation_energy:FormationEnergyAnalyzer"
h_solubility     = "materialsframework.analysis.h_solubility:HSolubilityAnalyzer"
phono3py         = "materialsframework.analysis.phono3py:Phono3pyAnalyzer"
phonopy          = "materialsframework.analysis.phonopy:PhonopyAnalyzer"
usfe             = "materialsframework.analysis.usfe:USFEAnalyzer"

[project.entry-points."materialsframework.transformations"]
annni            = "materialsframework.transformations.annni:ANNNIStackingFaultTransformation"
bain             = "materialsframework.transformations.bain:BainDisplacementTransformation"
cte              = "materialsframework.transformations.cte:CTETransformation"
cubic_elastic_constants = "materialsframework.transformations.cubic_elastic_constants:CubicElasticConstantsDeformationTransformation"
elastic_constants = "materialsframework.transformations.elastic_constants:ElasticConstantsDeformationTransformation"
eos              = "materialsframework.transformations.eos:EOSTransformation"
h_solubility     = "materialsframework.transformations.h_solubility:HSolubilityTransformation"
phono3py         = "materialsframework.transformations.phono3py:Phono3pyDisplacementTransformation"
phonopy          = "materialsframework.transformations.phonopy:PhonopyDisplacementTransformation"
usfe             = "materialsframework.transformations.usfe:USFETransformation"

[project.entry-points."materialsframework.tools"]
bond_lattice_parameter = "materialsframework.tools.bond_lattice_parameter:BondLatticeParameter"
cluster_expansion      = "materialsframework.tools.cluster_expansion:ClusterExpansion"
material_parameters    = "materialsframework.tools.cahn_hilliard:MaterialParameters"
phase_field_model      = "materialsframework.tools.cahn_hilliard:PhaseFieldModel"
simulation_grid        = "materialsframework.tools.cahn_hilliard:SimulationGrid"
sqs2tdb                = "materialsframework.tools.sqs2tdb:Sqs2tdb"
sqsgen                 = "materialsframework.tools.sqsgen:SqsGenerator"
stability_map          = "materialsframework.tools.stability_map:StabilityMap"
trajectory_observer    = "materialsframework.tools.trajectory:TrajectoryObserver"
